Closed Bug 1417933 Opened 7 years ago Closed 6 years ago

Titlebar is shown despite settings to draw in the titlebar

Categories

(Core :: Widget: Gtk, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla59
Tracking Status
firefox59 --- fixed

People

(Reporter: marco, Assigned: stransky)

References

(Blocks 1 open bug, Regressed 1 open bug)

Details

Attachments

(6 files)

Attached image titlebars.png
I've set "widget.allow-client-side-decoration" to true.

The titlebar is still shown and the window controls are shown twice.
(In reply to Marco Castelluccio [:marco] from comment #0)
> Created attachment 8929012 [details]
> titlebars.png
> 
> I've set "widget.allow-client-side-decoration" to true.
> 
> The titlebar is still shown and the window controls are shown twice.

Maybe you forgot to set "browser.tabs.drawInTitlebar" to "true" ?
(In reply to N. W. from comment #1)
> Maybe you forgot to set "browser.tabs.drawInTitlebar" to "true" ?

It is true by default.
Flags: needinfo?(stransky)
I have the same bug on openSUSE Tumbleweed (snapshot 20171115) in KDE Plasma 5.11.3
I too have "widget.allow-client-side-decoration" and "browser.tabs.drawInTitlebar" set to "true".
Same bug here in XFCE 4.12 (Arch Linux), both "widget.allow-client-side-decoration" and "browser.tabs.drawInTitlebar" are set to true.
Same issue. Firefox 59 nightly on debian testing, xfce 4.12.
widget.allow-client-side-decoration" and "browser.tabs.drawInTitlebar" are set to true.
I've described the same issue here: https://bugzilla.mozilla.org/show_bug.cgi?id=1283299#c112

Copy of my comment:

> Experiencing a weird "double-icons" issue, most notably seen in the middle photo of the already uploaded attachment in this thread: https://bug1283299.bmoattachments.org/attachment.cgi?id=8901247
> 
> Loosely explained, it seems to work as expected, however, the titlebar doesn't get removed. As a result, I have two sets of windows controls.
> 
> You can see the result here: https://i.imgur.com/JpLMpS0.png
> 
> Running Ubuntu 17.10 and Nightly from the PPA (so the version 59.0a1 (2017-11-16)). I can confirm that I'm experiencing the same issue with both Wayland and X11 sessions. Both "widget.allow-client-side-decorations" and "browser.tabs.drawInTitlebar" have been set to true.
> 
> In the unmaximized fields, I see a top line between the old titlebar and the new titlebar+tabs (https://i.imgur.com/46kRc7A.png). When the window is maximized, the line disappears.
> 
> In the Customize window, both "Title Bar" and "Drag Space" are unchecked. Using the default theme (slightly modified using userChrome.css, but I've recreated this using a temporary profile as well) and density set to Touch.
> 
> Not sure what else I could do to help you out with replicating this issue, but I'll be glad to provide further info if necessary.
XFCE and KDE should be supported here, maybe Gtk+ version does the difference. Which distro do you guys run? I see Ubuntu 17.10, anything else?
Flags: needinfo?(stransky) → needinfo?(mcastelluccio)
(In reply to Martin Stránský [:stransky] from comment #7)
> XFCE and KDE should be supported here, maybe Gtk+ version does the
> difference. Which distro do you guys run? I see Ubuntu 17.10, anything else?

Debian testing & XFCE 4.12, libgtk 3.22.
(In reply to Martin Stránský [:stransky] from comment #7)
> XFCE and KDE should be supported here, maybe Gtk+ version does the
> difference. Which distro do you guys run? I see Ubuntu 17.10, anything else?

In my previous comment, I mentioned I use openSUSE Tumbleweed
I'm using GTK 3.22
(In reply to Martin Stránský [:stransky] from comment #7)
> XFCE and KDE should be supported here, maybe Gtk+ version does the
> difference. Which distro do you guys run? I see Ubuntu 17.10, anything else?

Arch Linux, GTK3 3.22, GTK2 2.24
Ubuntu 17.10 (switching back to Fedora soon!), GTK 3.22.25.
Flags: needinfo?(mcastelluccio)
I am having the same issues, but only when Firefox is running as a user process, when running as root all is fine.
Vanilla Firefox 59 (2017-11-18 (I had just updated, with no visible changes pertaining this issue)) (I had manually pushed the files to /usr/, Solus Unstable, libgtk-3 3.22.26, running Budgie 10.4.

As to why I even run Firefox as root, I only do it to update Firefox, as on Windows (I don't have the patience to manually update Firefox every day).
Running it as root here doesn't work, the titlebar is still there.
(In reply to gabrielhuwe from comment #13)
> Running it as root here doesn't work, the titlebar is still there.

For me (debian testing) running as root doesn't help either.
I'm seeing the same thing in Ubuntu MATE 17.10 with both the default window manager Marco and with Compiz.
Running as root gets rid of the titlebar for me on Ubuntu 17.10 (Xorg).
(In reply to Martin Stránský [:stransky] from comment #7)
> XFCE and KDE should be supported here, maybe Gtk+ version does the
> difference. Which distro do you guys run? I see Ubuntu 17.10, anything else?

Running KDE neon as the distro here, which basically is the official KDE distro and is always up-to-date with the latest KDE software: https://neon.kde.org/

KDE neon is currently based on Ubuntu 16.04, which uses GTK+ 3.18. This is what it looks like here:

https://bugzilla.mozilla.org/attachment.cgi?id=8929825

As you can see, the title bar is still visible, so the window controls are duplicated. Furthermore, as you can see from the screenshot, there is a a bit of additional space between the tab bar and the title bar, which looks odd.

Additionally, the window controls in the tab bar look odd, which probably is: https://bugzilla.mozilla.org/show_bug.cgi?id=1408335
I can confirm that running Nightly as root on Ubuntu 17.10 (in an X11 session) gets rid of the title bar.
Running as root did not remove the title bar for me on openSUSE Tumbleweed.
Running as root doesn't remove the title bar in Debian testing, XFCE 4.12, GTK 3.22.
Running as root removes titlebar for me - Solus Budgie (10.4), GTK 3.22.  Normal user retains titlebar though.
Yes, I can see that on KDE on some other WM. Looks like only gnome-shell and Cinamon support to remove titlebar but simultaneously provide resize handlers.

We'd need to disable all decorations on the incompatible WM and provide resize handlers as Chrome does on Linux.
Assignee: nobody → stransky
Partial fix (without the resizers implementation) will land at Bug 1418829.
Depends on: 1418829
(In reply to Martin Stránský [:stransky] from comment #23)
> Yes, I can see that on KDE on some other WM. Looks like only gnome-shell and
> Cinamon support to remove titlebar but simultaneously provide resize
> handlers.
> 
> We'd need to disable all decorations on the incompatible WM and provide
> resize handlers as Chrome does on Linux.

I'm using gnome-shell on Ubuntu.
Depends on: 1419456
Please note that "widget.allow-client-side-decoration" is going to be removed at Bug 1418829 and only "browser.tabs.drawInTitlebar" does the titlebar rendering control.
Depends on: 1419460
Hi,
despite enabling CSD (customize / Title Bar [x]), the CSD titlebar is not shown on Pantheon (elemenaryOS) aswell.

echo $XDG_CURRENT_DESKTOP
Pantheon
(In reply to christian.ohrfandl from comment #28)
> Hi,
> despite enabling CSD (customize / Title Bar [x]), the CSD titlebar is not
> shown on Pantheon (elemenaryOS) aswell.
> 
> echo $XDG_CURRENT_DESKTOP
> Pantheon

We may need to be more flexible here, I'm considering a kind of env variable to override the CSD detection.
Depends on: 1420818
Pantheon (elemenaryOS) is Bug 1420818 now.
Depends on: 1420820
Same problem here. FF nightly build (59, up to date) Ubuntu 17.10 running gnome-shell and have tried both xorg and wayland.
Update, fix found here:
https://bugzilla.mozilla.org/show_bug.cgi?id=1283299

by running:
env MOZ_GTK_TITLEBAR_DECORATION=client ./firefox
Changing that variable is not working for me.

Previously the titlebar setting did work. It is no longer working, and no overrides are helping, but stopped working with yesterday's Nightly update.
Please note that due to regression Bug 1423810 the titlebar rendering was temporary disabled on systems other than gnome-shell/Cinnamon. It's tracked as Bug 1424974.
Is there any update on this?

When using the latest Nightly on KDE Plasma and disabling the "Titlebar" checkbox under "Customize", the titlebar is still being drawn by KWin (compositor/window manager) and there are not additional window minimize/maximize/close buttons being drawn inside Firefox.
Agreed. I have asked in Bug 1423810 why titlebar rendering has not been turned back on now that Bug 1424974 is listed as fixed.
No longer depends on: 1420818
(In reply to N. W. from comment #35)
> Is there any update on this?
> 
> When using the latest Nightly on KDE Plasma and disabling the "Titlebar"
> checkbox under "Customize", the titlebar is still being drawn by KWin
> (compositor/window manager) and there are not additional window
> minimize/maximize/close buttons being drawn inside Firefox.

Still not working with Nightly 59.0a1 (2013-01-13) (64-bit).
Titlebar also persists for me in 59.0a1 2018-01-13 64-Bit on Debian Unstable / XFCE. Also no minimize/maximize/close buttons inside firefox.
widget.allow-client-side-decoration = true
browser.tabs.drawInTitlebar = true
widget.allow-client-side-decoration = true
Comment on attachment 8941011 [details]
Bug 1417933 - enable CSD titlebar rendering mode on Unity desktop,

https://reviewboard.mozilla.org/r/211306/#review218572
Attachment #8941011 - Flags: review?(jhorak) → review+
Comment on attachment 8941010 [details]
Bug 1417933 - enable CSD titlebar rendering mode as Bug 1424974 regression is fixed,

https://reviewboard.mozilla.org/r/211304/#review218786
Attachment #8941010 - Flags: review?(jhorak) → review+
Comment on attachment 8941011 [details]
Bug 1417933 - enable CSD titlebar rendering mode on Unity desktop,

https://reviewboard.mozilla.org/r/211306/#review218788
Pushed by stransky@redhat.com:
https://hg.mozilla.org/integration/autoland/rev/4fbda7310828
enable CSD titlebar rendering mode as Bug 1424974 regression is fixed, r=jhorak
https://hg.mozilla.org/integration/autoland/rev/7d2121c8e0dd
enable CSD titlebar rendering mode on Unity desktop, r=jhorak
https://hg.mozilla.org/mozilla-central/rev/4fbda7310828
https://hg.mozilla.org/mozilla-central/rev/7d2121c8e0dd
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla59
Finally the titlebar is gone, a big thanks to the people who are working on it.
However it still doesn't look optimal, there is a bit of room above the tabs:
https://i.imgur.com/mR0vDtE.png
(Debian unstable, XFCE)
YES!!  A big thanks!
FYI, mine appears fine (no extra space above tabs).
Ubuntu 17.10, gnome-shell, Wayland.
(In reply to helios.solaris from comment #46)
> Finally the titlebar is gone, a big thanks to the people who are working on
> it.
> However it still doesn't look optimal, there is a bit of room above the tabs:
> https://i.imgur.com/mR0vDtE.png
> (Debian unstable, XFCE)

That's Bug 1419442.
This is currently NOT fixed for me, when it worked just fine before it was disabled to fix that other bug. I am on Ubuntu 14.04 LTS, which is still supported for another year. Was this perhaps only fixed for GTK 3.20+ instead of 3.10+, as before?
(In reply to Terrell Kelley from comment #49)
> This is currently NOT fixed for me, when it worked just fine before it was
> disabled to fix that other bug. I am on Ubuntu 14.04 LTS, which is still
> supported for another year. Was this perhaps only fixed for GTK 3.20+
> instead of 3.10+, as before?

Please file another bug for that.
(In reply to Martin Stránský [:stransky] from comment #50)

> Please file another bug for that.

Filed as Bug 1431429
Depends on: 1435134
No longer depends on: 1435686
Depends on: 1477268
Depends on: 1502519
No longer depends on: 1502519
Regressions: 1502519
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: