Bug 1417933 - enable CSD titlebar rendering mode as Bug 1424974 regression is fixed, r=jhorak

MozReview-Commit-ID: 7SCjbJr9Arl